<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <DUT Name="DUT_MotionStage_Extras" Id="{1e6627e8-279b-4e38-87a2-ae79853e08df}">
    <Declaration><![CDATA[TYPE DUT_MotionStage_Extras :
STRUCT
	fVisuStep: LREAL;
	bVisuLowLim: BOOL;
	bVisuHighLim: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>